# damumed

./: README.md  package-lock.json  pyproject.toml  render.yaml
app/: main.py
app/damumed/: service.py
app/damumed/adapters/: google.json
app/damumed/repository/: repository.py
app/damumed/router/: router_check_certificate.py  router_check_user.py
